# VALEO-NeuroERP-1.0.5

./: .coverage  .cursorrules  .cursorrules-ant-design  .cursorrules-material-ui  .cursorrules-tailwind  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  API_TESTING_SUMMARY.md  AUTO_STARTUP_ANLEITUNG.md  BACKEND_API_INTEGRATION_SUMMARY.md  BACKEND_INTEGRATION_COMPLETE_SUMMARY.md  BACKEND_INTEGRATION_SUMMARY.md  CHANGELOG.md  CLAUDE_FLOW_INTEGRATION_SUMMARY.md  CURSOR_AI_INTEGRATION_GUIDE.md  DATABASE_MATRIX_ANALYSIS.md  DEMO_STATUS.md  DEPLOYMENT.md  DEVOPS_README.md  DOCKER_DEMO_README.md  DOCKER_WSL_INSTALLATION.md  DUAL_MCP_ARCHITEKTUR.md  Dockerfile  Dockerfile.backend  ERP_ENTERPRISE_ROADMAP.md  ERP_IMPLEMENTATION_STATUS.md  ERROR_FIXES_SUMMARY.md  FEHLENDE_FORMULARE_ANALYSE.md  FINANCE_TESTER_ANLEITUNG.md  FORMULAR_IMPLEMENTIERUNG_ABGESCHLOSSEN.md  FORMULAR_IMPLEMENTIERUNG_SUMMARY.md  FORM_COMPONENTS_FIXES_SUMMARY.md  FRONTEND_INTEGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KASSENSYSTEM_DOKUMENTATION.md  L3_DATABASE_MATRIX_ANALYSIS.md  L3_MATRIX_FINAL_REPORT.md  L3_MATRIX_ZUSAMMENFASSUNG.md  (+253 more)
backend/: 0.104.0  0.24.0  1.0.0  2.0.0  2.5.0  2.9.0  Dockerfile  Dockerfile.mcp  Dockerfile.middleware  Dockerfile.prod  README.md  README_CACHE.md  README_IMPORT_HANDLER.md  __init__.py  ai_backend_test_results.json  ai_test_data.db  cache_manager.py  celery.py  celery_app.py  config.env  config.env.example  create_test_user.py  dashboard_requirements.txt  demo_server.py  demo_server_celery.py  demo_server_celery_enhanced.py  enhanced_cache_manager.py  env.example  genxais_integration.py  import_handler_template.py  init_test_data.py  ip_manager.py  ip_manager_api.py  libreoffice_processor.py  main.py  main_enterprise.py  mcp_supabase_server.py  mcp_ui_metadata_server.py  minimal_server.py  minimal_server_ip_enabled.py  (+60 more)
backend/alembic/: env.py
backend/api/: __init__.py  __init__.py.backup  __init__.py.full_backup  admin.py  ai_barcode_api.py  ai_inventory_api.py  ai_voucher_api.py  analytics_routes.py  anomaly_api.py  articles_api.py  async_transaction.py  auth_routes.py  autocomplete.py  barcode_api.py  batch_api.py  charge_management.py  chargen_lager.py  charges_api.py  crm_routes.py  database_mapping.py  database_service.py  emergency_api.py  erp_integration.py  health.py  inventory_api.py  main.py  metrics.py  monitoring.py  notification_api.py  partner_api.py  performance_api.py  performance_test.py  pos_api.py  production_api.py  produktion.py  purchasing_api.py  qs_api.py  qs_futtermittel.py  quality_api.py  realtime_dashboard_api.py  (+13 more)
backend/apm_framework/: __init__.py  apm_workflow.py  core.py  create_mode.py  demo.py  erp_workflow.py  handover_manager.py  implementation_mode.py  models.py  mongodb_connector.py  plan_mode.py  rag_service.py  rag_service_server.py  reflect_archive_data_loader.py  requirements.txt  van_mode.py  workflow.py
backend/app/: __init__.py  dependencies.py  main.py
backend/auth/: auth.py  enterprise_security.py
backend/components/: DataAnalysisComponent.py  DocumentManagementComponent.py  InventoryManagementComponent.py  NotificationComponent.py  ReportGenerationComponent.py  TransactionProcessingComponent.py  UserAuthenticationComponent.py
backend/config/: database.ts  production.py
backend/core/: __init__.py  batch_processor.py  cache.py  celeryconfig.py  config.py  db.py  error_handling.py  exceptions.py  health.py  import_handler.py  init_system.py  logging_config.py  path_registry.py  profiling.py  routing.py  server.py  simple_logging.py  van_phase_manager.py
backend/data/: init_finance_data.py  (+1 more)
(+2455 files in other folders)
